tests/ui/parser/unsafe-foreign-mod.rs
unsafe extern "C" {
    //~^ ERROR extern block cannot be declared unsafe
}

fn main() {}

// ferrocene-annotations: fls_tmoh3y9oyqsy
// External Blocks
//
// ferrocene-annotations: fls_8wnyln2nmg4y
// unsafe Blocks
